Add end point on Kong Adapter to revoke access tokens Haufe-Lexware/wicked.haufe.io#70
