# resources/swagger/oauth2-swagger.yml
@@ -77,6 +77,21 @@ paths:
             $ref: '#/definitions/accessTokenType'
         404:
           description: Not found
+  delete:
+    parameters:
+      - name: authenticated_userid
+        in: query
+        type: string
+        description: Pass in either `access_token` or `authenticated_userid` to delete token(s)
+      - name: access_token
+        in: query
+        type: string
+        description: Pass in either `access_token` or `authenticated_userid` to delete token(s)
+    responses:
+      204:
+        description: Successfully delete, no response
+      404:
+        description: Not found
 definitions:
   implicitTokenType:
     type: object
